--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "dependencies": {
     "q": "~0.9.6",
     "pg": "~2.3.1"
+  },
+  "devDependencies": {
+    "mocha": "~1.12.0",
+    "chai": "~1.7.2",
+    "chai-as-promised": "~3.3.1"
   }
 }
