--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "author": "Mike Wagg <michael@guerillatactics.co.uk>",
   "license": "BSD",
   "dependencies": {
-    "q": "~0.9.6",
-    "pg": "~3.6.0"
+    "pg": "~4.3.0",
+    "q": "^0.9.7"
   },
   "devDependencies": {
-    "mocha": "~1.12.0",
-    "chai": "~1.7.2",
-    "chai-as-promised": "~3.3.1"
+    "chai": "^2.1.1",
+    "chai-as-promised": "^4.3.0",
+    "mocha": "^2.2.1"
   }
 }
